--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,10 +1,32 @@
-.column {
+.houses {
   float: left;
-  width: 50%;
+  width: 80%;
 }
 
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+.input {
+  float: left;
+  width: 20%;
+  border-radius: 4px;
+  border: 1px solid #d9e2f1;
+  background-color: #fff;
+}
+
+.house-constructor header {
+  font-weight: bold;
+  justify-content: space-between;
+  align-items: center;
+  width: 80%;
+  max-width: 40rem;
+  margin: 2rem auto;
+  color: #000000;
+  border-radius: 4px;
+  border: 1px solid #d9e2f1;
+  text-align: center;
+  font-size: 2rem;
+  font-family: "Quicksand", sans-serif;
+}
+
+.house-constructor main {
+  display: flex;
+  padding: 5px;
 }
