--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,26 +1,11 @@
-.houses {
-  float: left;
-  width: 80%;
-}
-
-.input {
-  float: left;
-  width: 20%;
-  border-radius: 4px;
-  border: 1px solid #d9e2f1;
-  background-color: #fff;
-}
-
 .house-constructor header {
   font-weight: bold;
   justify-content: space-between;
   align-items: center;
-  width: 80%;
-  max-width: 40rem;
   margin: 2rem auto;
   color: #000000;
   border-radius: 4px;
-  border: 1px solid #d9e2f1;
+  border: 1px solid #cdd9ecb4;
   text-align: center;
   font-size: 2rem;
   font-family: "Quicksand", sans-serif;
@@ -28,5 +13,7 @@
 
 .house-constructor main {
   display: flex;
-  padding: 5px;
+  gap: 4vw;
+  flex-direction: row;
+  padding: 1rem;
 }
