--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -1,24 +1,55 @@
 .house-form {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  padding: 5px;
+  background-color: #d9e2f1;
+  border-radius: 1.5rem;
+  max-height: 80vh;
+  min-width: 25vw;
+  max-width: 25vw;
 }
 
-.house-form ul {
+.house-list ul {
   list-style-type: none;
+  display: flex;
+  flex-direction: column;
 }
 
-.house-form div {
-  display: table-row;
+.house-list {
+  overflow: auto;
 }
 
-.house-form h1 {
-  font-weight: normal;
+.house-form-header {
+  border-radius: 1.5rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-.house-form button {
-  padding: 0.5rem;
-  border-radius: 4px;
-  border: 1px solid #d9e2f1;
-  background-color: #fff;
-  color: #414956;
+.house-form-header h1 {
+  flex-direction: column;
+}
+
+.house-form-header button {
+  padding: 0.8rem 1rem;
+  border-radius: 0.5rem;
+  border: 0.2rem solid #578ee6;
+  background-color: #d9e2f1;
+  font-size: 1rem;
+  font-weight: bold;
+  color: #0b2650;
+  box-shadow: 0 0.6rem #999;
+}
+
+.house-form-header button:hover {
+  background-color: #578ee6;
+  color: #ffffff;
+}
+
+.house-form-header button:active {
+  background-color: #578ee6;
+  color: #ffffff;
+  box-shadow: 0 0.3rem #666;
+  transform: translateY(0.3rem);
 }
