--- a/src/components/house/HousesList.module.css
+++ b/src/components/house/HousesList.module.css
@@ -1,10 +1,19 @@
 .houses-list {
-  align-content: center;
+  max-width: 65vw;
+  max-height: 80vh;
+  min-width: 65vw;
+  min-height: 80vh;
+  overflow: auto;
+  display: flex;
+}
+
+.houses-list ul {
   list-style-type: none;
+  white-space: nowrap;
+  margin-top: auto;
 }
 
 .houses-list li {
-  float: left;
-  width: auto;
-  padding: 5px;
+  display: inline-block;
+  padding: 0.5rem;
 }
