--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -6,18 +6,24 @@
   background-color: #d9e2f1;
   border-radius: 1.5rem;
   max-height: 80vh;
-  min-width: 25vw;
-  max-width: 25vw;
+  min-width: max-content;
 }
 
 .house-list ul {
   list-style-type: none;
-  display: flex;
-  flex-direction: column;
+  display: table;
+  padding: 0;
+}
+
+.house-list li {
+  list-style-type: none;
+  display: table-row;
 }
 
 .house-list {
   overflow: auto;
+  overflow-y: overlay;
+  overflow-x: overlay;
 }
 
 .house-form-header {
@@ -25,6 +31,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  min-width: 25rem;
 }
 
 .house-form-header h1 {
